Alignment fixes for baseball cards and truncation

--- a/themes/janeswalk/css/pages/sass/city.scss
+++ b/themes/janeswalk/css/pages/sass/city.scss
@@ -323,7 +323,7 @@
     }
 
     .thumbnail {
-      min-height: 520px;
+      min-height: 535px;
       transition: none;
 
       .walkimage {
